# generic_reaction_wheel

./: .gitignore  CMakeLists.txt  README.md
fsw/: CMakeLists.txt
fsw/cfs/: CMakeLists.txt
fsw/cfs/mission_inc/: generic_reaction_wheel_perfids.h
fsw/cfs/platform_inc/: generic_reaction_wheel_msgids.h  generic_reaction_wheel_platform_cfg.h
fsw/cfs/src/: generic_reaction_wheel_app.c  generic_reaction_wheel_app.h  generic_reaction_wheel_events.h  generic_reaction_wheel_msg.h  generic_reaction_wheel_version.h
fsw/cfs/unit-test/: CMakeLists.txt
fsw/cfs/unit-test/coveragetest/: coveragetest_generic_reaction_wheel_app.c  coveragetest_generic_reaction_wheel_device.c  generic_reaction_wheel_app_coveragetest_common.h
fsw/cfs/unit-test/inc/: ut_generic_reaction_wheel_app.h
fsw/cfs/unit-test/stubs/: generic_reaction_wheel_device_stubs.c  libuart_stubs.c
fsw/fprime/: library.cmake
fsw/fprime/mission_inc/: generic_reaction_wheel_perfids.h
fsw/fprime/platform_inc/: generic_reaction_wheel_msgids.h  generic_reaction_wheel_platform_cfg.h
fsw/fprime/rw_src/: CMakeLists.txt  Generic_reaction_wheel.cpp  Generic_reaction_wheel.fpp  Generic_reaction_wheel.hpp
fsw/fprime/rw_src/docs/: sdd.md
fsw/fprime/src/: generic_reaction_wheel_app.c  generic_reaction_wheel_app.h  generic_reaction_wheel_events.h  generic_reaction_wheel_msg.h  generic_reaction_wheel_version.h
fsw/platform_inc/: generic_reaction_wheel_msgids.h
fsw/shared/: generic_reaction_wheel_device.c  generic_reaction_wheel_device.h
fsw/src/: generic_reaction_wheel_app.c  generic_reaction_wheel_app.h  generic_reaction_wheel_events.h  generic_reaction_wheel_msg.h
fsw/standalone/: CMakeLists.txt  device_cfg.h  generic_reaction_wheel_checkout.c  generic_reaction_wheel_checkout.h
gsw/: GENERIC_RW_SIM_CMD.txt
gsw/GENERIC_REACTION_WHEEL/cmd_tlm/: GENERIC_REACTION_WHEEL_CMD.txt  GENERIC_REACTION_WHEEL_TLM.txt
gsw/GENERIC_REACTION_WHEEL/lib/: generic_reaction_wheel_lib.rb
gsw/GENERIC_REACTION_WHEEL/procedures/: generic_rw_test.rb
gsw/GENERIC_REACTION_WHEEL/procedures/tests/: generic_rw_app_test.rb  generic_rw_ast_test.rb  generic_rw_cpt_test.rb  generic_rw_device_test.rb  generic_rw_lpt_test.rb
sim/: CMakeLists.txt  README.md
sim/inc/: generic_rw_data_point.hpp  generic_rw_hardware_model.hpp  generic_rw_sim_data_42socket_provider.hpp
sim/src/: generic_reaction_wheel_sim.cpp  generic_rw_data_point.cpp  generic_rw_hardware_model.cpp  generic_rw_sim_data_42socket_provider.cpp
